tests/ui/diagnostic_namespace/opaque/highlight_maccall.default.stderr
error: oh no
  --> $DIR/highlight_maccall.rs:16:5
   |
LL |     my_error!();
   |     ^^^^^^^^^^^

error: aborting due to 1 previous error

